# spamDetector

./: install.py  pyproject.toml  run.sh
code/: main.py  model.py
spamdetector/code/: main.py  model.py
spamdetector/model/: sms_spam_model.pkl  sms_spam_vectorizer.pkl
